checked sass imports

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -4,3 +4,5 @@
 @import './components/Nav';
 @import './components/Footer';
 @import './components/Home';
+@import './components/FAQ';
+@import './components/CardFAQ';
