added gallery and services

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/CardFAQ';
 @import './components/Gallery';
 @import './components/CardBlog';
+@import './components/Services';
