added contact section

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './components/Gallery';
 @import './components/CardBlog';
 @import './components/Services';
+@import './components/Contact';
