--- a/client/src/styles/components/_Header.scss
+++ b/client/src/styles/components/_Header.scss
@@ -2,7 +2,7 @@
 
 .header{
     min-height: 5vh;
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     background-color: $mint-cream;
