--- a/client/src/styles/components/_CardFAQ.scss
+++ b/client/src/styles/components/_CardFAQ.scss
@@ -5,13 +5,30 @@
   gap: 1rem; 
 
   .card {
-    width: 90%; 
-    margin: 0 auto; 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
     border-radius: 8px;
-
+    padding: 1.5rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  
+    &:hover {
+      transform: translateY(-5px);
+    }
     .card-body {
-      text-align: justify; // Justifica el texto
+      text-align: justify;
+      color: #666;
+      font-style: italic;
+      margin-bottom: 1.5rem;
+      line-height: 1.6;
+  
+    };
+
+    .card-title {
+      color:  darken($mint-cream, 80%);
+      font-style: normal;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      font-weight: 600;
     }
   }
 }
