--- a/client/src/styles/components/_FAQ.scss
+++ b/client/src/styles/components/_FAQ.scss
@@ -18,7 +18,10 @@
 
 // Espaciado para el título
 h4 {
-  margin: 2rem 0;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  color: #333;
 }
 
 // Media query para pantallas grandes
