--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -8,18 +8,25 @@
       margin-bottom: 30px;
   
       h1 {
-        font-size: 2em;
+        text-align: center;
+        font-size: 2.5rem;
+        margin-bottom: 2rem;
+        color: #333;  
       }
   
       h2 {
-        font-size: 1.5em;
-        margin-top: 20px;
+        color:  darken($mint-cream, 80%);
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        font-weight: 600;
+   
       }
   
       p {
-        font-size: 1em;
-        line-height: 1.6;
-      }
+        color: #666;
+        font-style: italic;
+        margin-bottom: 1.5rem;
+        line-height: 2rem;      }
     }
   
     .indicators {
