--- a/client/src/styles/views/_App.scss
+++ b/client/src/styles/views/_App.scss
@@ -3,6 +3,11 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: "Urbanist", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 450;
+    font-style: normal;
+    
 }
 
 // body {
