--- a/client/src/styles/components/_Contact.scss
+++ b/client/src/styles/components/_Contact.scss
@@ -3,9 +3,11 @@
     background-color: #f8f9fa;
   
     h1 {
-      color: #2c3e50;
+      text-align: center;
+      font-size: 2.5rem;
       margin-bottom: 2rem;
-      font-weight: 600;
+      color: #333;
+
     }
   
     .info-section {
