--- a/client/src/styles/components/_Blog.scss
+++ b/client/src/styles/components/_Blog.scss
@@ -7,10 +7,11 @@
       margin-bottom: 3rem;
   
       h1 {
-        color: #2c3e50;
+        text-align: center;
         font-size: 2.5rem;
-        margin-bottom: 1rem;
-        font-weight: 600;
+        margin-bottom: 2rem;
+        color: #333;
+  
       }
   
       p {
