--- a/client/src/styles/components/_Gallery.scss
+++ b/client/src/styles/components/_Gallery.scss
@@ -3,7 +3,9 @@
 .carousel-caption h5,
 .carousel-caption p {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), 0 0 20px rgba(255, 255, 255, 0.9);
-  color: darken($mint-cream, 80%);
+  //color: darken($mint-cream, 80%);
+  font-weight: 600;
+  color: black
 }
 
 .carousel,
