--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -25,8 +25,8 @@
       gap: 1rem;
   
       a {
-        color: #2c3e50;
-        font-weight: 500;
+        color: darken($mint-cream, 80%);
+        font-weight: 600;
         padding: 0.5rem 1rem;
         transition: all 0.3s ease;
         text-decoration: none;
