--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -2,7 +2,16 @@
 
 .navbar {
     padding: 1rem 0;
-  
+    
+    position: fixed; 
+    top: 0;          
+    left: 0;         
+    width: 100%;     
+    z-index: 1000;   
+    background-color: $mint-cream; 
+    padding: 10px;   
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+    
     .brand-container {
       display: flex;
       align-items: center;
