--- a/client/src/styles/components/_Blog.scss
+++ b/client/src/styles/components/_Blog.scss
@@ -1,16 +1,17 @@
 .blog-page {
-    padding: 4rem 0;
+//    padding: 4rem 0;
     background-color: #f8f9fa;
-  
+    
     .blog-header {
       text-align: center;
-      margin-bottom: 3rem;
+      //margin-bottom: 3rem;
   
       h1 {
         text-align: center;
         font-size: 2.5rem;
         margin-bottom: 2rem;
         color: #333;
+        margin-top: 60px;
   
       }
   
