--- a/client/src/styles/components/_Contact.scss
+++ b/client/src/styles/components/_Contact.scss
@@ -1,7 +1,7 @@
 .contact-page {
-    padding: 4rem 0;
+//    padding: 4rem 0;
     background-color: #f8f9fa;
-  
+    margin-top: 60px;
     h1 {
       text-align: center;
       font-size: 2.5rem;
