--- a/client/src/styles/components/_FAQ.scss
+++ b/client/src/styles/components/_FAQ.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
+  
   .card {
     width: 85%;
     margin: 0 auto;
@@ -22,6 +22,7 @@ h4 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   color: #333;
+  margin-top: 60px;
 }
 
 // Media query para pantallas grandes
