--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -1,6 +1,6 @@
 $color1: #cdb4db;
-$color2: #ba9ee2;
-$color3: #d15b73;
+$color2: #84bdac;
+$color3: #aee4cc;
 $sky-blue: #def0ff;
 $light-blue: #a2d2ff;
 $alice-blue: #f4faff;
