--- a/client/src/styles/components/_Contact.scss
+++ b/client/src/styles/components/_Contact.scss
@@ -1,5 +1,7 @@
+@import '../utils/variables.scss';
+
 .contact-page {
-//    padding: 4rem 0;
+
     background-color: #f8f9fa;
     margin-top: 60px;
     h1 {
@@ -96,14 +98,15 @@
         }
   
         .submit-button {
-          background-color: #3498db;
+          color: black;
+          background-color: $color3;
           border: none;
           padding: 0.75rem 2rem;
           font-weight: 500;
           transition: all 0.3s ease;
   
           &:hover {
-            background-color: #2980b9;
+            background-color: $color2;
             transform: translateY(-2px);
           }
         }
@@ -111,7 +114,7 @@
     }
   }
   
-  // Responsive adjustments
+
   @media (max-width: 768px) {
     .contact-page {
       padding: 2rem 0;
