--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -5,7 +5,7 @@
     padding: 60px;
   
     .introduction {
-      margin-bottom: 30px;
+      margin: 20px 0 30px 0;
   
       h1 {
         text-align: center;
@@ -32,7 +32,7 @@
     .indicators {
       display: flex;
       justify-content: space-around;
-      margin-top: 20px;
+      margin-top: 30px;
   
       .indicator {
         display: flex;
