--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -26,7 +26,7 @@
       .brand-name {
         font-size: 1.5rem;
         font-weight: 600;
-        color: #2c3e50;
+        color:darken($mint-cream, 80%);
       }
     }
   
