--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: black;
   overflow: hidden;
 
   &-bg {
@@ -23,10 +23,18 @@
   &-title {
     font-size: 3rem;
     margin-bottom: 1rem;
+    text-shadow: 
+      0 0 20px rgba(255, 255, 255, 0.9),
+      0 0 30px rgba(255, 255, 255, 0.7),
+      0 0 40px rgba(255, 255, 255, 0.5);
   }
 
   &-description {
     font-size: 1.5rem;
     margin-bottom: 2rem;
+    text-shadow: 
+      0 0 10px rgba(255, 255, 255, 0.8),
+      0 0 20px rgba(255, 255, 255, 0.6),
+      0 0 30px rgba(255, 255, 255, 0.4);
   }
 }
