--- a/client/src/styles/components/_Gallery.scss
+++ b/client/src/styles/components/_Gallery.scss
@@ -1,6 +1,13 @@
+h1 {
+  margin-top: 60px;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
 .polaroid-gallery {
   display: grid;
-  margin-top: 60px;
   grid-template-columns: 1fr; // Móvil: una imagen por fila
   gap: 20px;
   padding: 20px;
@@ -71,7 +78,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-     transition: opacity 0.3s ease;
+      transition: opacity 0.3s ease;
       opacity: 0;
     }
 
@@ -107,5 +114,70 @@
 @media (min-width: 1024px) {
   .polaroid-gallery {
     grid-template-columns: repeat(3, 1fr); // Tres columnas en pantallas grandes
+  }
+}
+
+/* Estilos para el overlay y carrusel */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  backdrop-filter: blur(5px);
+}
+
+.carousel {
+  position: relative;
+  width: 50%;
+  height: 80%;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .navigation {
+    position: absolute;
+    top: 50%;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    z-index: 10;
+    transform: translateY(-50%);  /* Asegura que las flechas estén centradas verticalmente */
+  }
+
+  .nav-btn {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 24px;
+    color: #333;
+    transition: background-color 0.3s ease;
+
+    /* Para las flechas al pasar el ratón */
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+
+    /* Para que las flechas estén a la misma altura, no necesitan márgenes adicionales */
+    &:focus {
+      outline: none;
+    }
   }
 }
