--- a/client/src/styles/components/_FAQ.scss
+++ b/client/src/styles/components/_FAQ.scss
@@ -1,17 +1,50 @@
 .card-container {
   display: flex;
   flex-direction: column;
+  flex-grow: 1; // Permite que el contenedor FAQ crezca para llenar el espacio restante
   gap: 1rem;
-  
-  .card {
-    width: 85%;
-    margin: 0 auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+  padding: 1rem;
 
-    // Justificar el texto dentro de las cards
-    .card-body {
-      text-align: justify;
+  .faq-list {
+    overflow-y: auto; // Habilita el scroll solo dentro de la lista si es necesario
+    width: 100%;
+    flex-grow: 1;
+    margin: 0 auto;
+
+    .faq-item {
+      border-bottom: 1px solid #ddd;
+      padding: 0.5rem 0;
+
+      .faq-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        text-align: left;
+        background: none;
+        border: none;
+        font-size: 1.2rem;
+        color: #333;
+        cursor: pointer;
+        padding: 0.5rem 0;
+        transition: color 0.3s ease;
+
+        &:hover {
+          color: darken($mint-cream, 80%);
+        }
+
+        .faq-toggle {
+          font-size: 1.5rem;
+          color: darken($mint-cream, 80%);
+          margin-left: 0.5rem;
+        }
+      }
+
+      .faq-answer {
+        padding: 0.5rem 0;
+        color: #555;
+        text-align: justify;
+      }
     }
   }
 }
@@ -23,33 +56,4 @@ h4 {
   margin-bottom: 2rem;
   color: #333;
   margin-top: 60px;
-}
-
-// Media query para pantallas grandes
-@media (min-width: 840px) {
-  .card-container {
-    flex-direction: column;
-    justify-content: center;
-
-    .mb-4 {
-      width: 85%;
-      margin: 0;
-
-      &:nth-child(odd) {
-        align-self: flex-start;
-
-        .card-title {
-          text-align: left;
-        }
-      }
-
-      &:nth-child(even) {
-        align-self: flex-end;
-
-        .card-title {
-          text-align: right;
-        }
-      }
-    }
-  }
 }
