--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../assets/Sobrecarga-en-el-cuidador-a.jpg');
+    background-image: url('../assets/manos.jpg');
     background-size: cover;
     background-position: center;
     z-index: -2;
