--- a/client/src/styles/components/_Blog.scss
+++ b/client/src/styles/components/_Blog.scss
@@ -1,8 +1,6 @@
 @import "../utils/variables.scss";
 
 .blog-page {
-
-    background-color: #f8f9fa;
     
     .blog-header {
       text-align: center;
@@ -81,7 +79,7 @@
             .category-badge {
               font-size: 0.8rem;
               padding: 0.4rem 0.8rem;
-              background-color: #3498db;
+              background-color: darken($mint-cream, 80%);
             }
   
             .post-date {
@@ -118,11 +116,11 @@
           .read-more-btn {
             width: 100%;
             padding: 0.75rem;
-            border-color: #3498db;
+            border-color:darken($mint-cream, 20%);
             color: black;
             
             &:hover {
-              background-color: $color2;
+              background-color:darken($mint-cream, 80%);
               color: white;
             }
           }
