--- a/client/src/styles/components/_Contact.scss
+++ b/client/src/styles/components/_Contact.scss
@@ -45,7 +45,7 @@
   
       .contact-message {
         font-style: italic;
-        border-left: 4px solid #3498db;
+        border-left: 4px solid darken($mint-cream, 80%);
         padding-left: 1rem;
       }
     }
@@ -80,7 +80,7 @@
         }
   
         .form-label {
-          color: #34495e;
+          color: darken($mint-cream,80%);
           font-weight: 500;
         }
   
@@ -90,21 +90,22 @@
           padding: 0.75rem;
           
           &:focus {
-            border-color: #3498db;
-            box-shadow: 0 0 0 0.2rem rgba(52, 152, 219, 0.25);
+            border-color: darken($mint-cream, 80%);
+            box-shadow: 0 0 0 0.2rem (darken($mint-cream, 10%));
           }
         }
   
         .submit-button {
           color: black;
-          background-color: $color3;
+          background-color: darken($mint-cream, 10%);
           border: none;
           padding: 0.75rem 2rem;
           font-weight: 500;
           transition: all 0.3s ease;
   
           &:hover {
-            background-color: $color2;
+            background-color: darken($mint-cream, 80%);
+            color: white;
             transform: translateY(-2px);
           }
         }
