--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -41,7 +41,7 @@
         text-decoration: none;
   
         &:hover {
-          color: #3498db;
+          color: darken($mint-cream, 90%);
         }
   
         &.active {
