small fixes in styles

--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -29,7 +29,7 @@
     transform: translateY(-50%);
     width: 100%;
     padding: 0 2rem 2rem 2rem;
-    background-color: rgba(48, 47, 47, 0.2); /* Fondo oscuro más suave */
+    background-color: rgba(48, 47, 47, 0.15); /* Fondo oscuro más suave */
     backdrop-filter: blur(4px); /* Desenfoque en el fondo */
 
     /* Centrado vertical y horizontal del texto */
@@ -62,11 +62,11 @@
 
 @media (max-width: 600px) {
   .home-bg {
-    background-image: url('../assets/manos2.jpg');
+    background-image: url('../assets/narissa-de-villiers-WmtpJcAPMco-unsplash.jpg');
   }
 
   .home-title {
-    font-size: 3rem; /* Reduce font size for small screens */
+    font-size: 2.75rem; /* Reduce font size for small screens */
   }
 
   .home-description {
