--- a/client/src/styles/components/_Header.scss
+++ b/client/src/styles/components/_Header.scss
@@ -1,9 +1,9 @@
 @import "../utils/variables.scss";
 
-.header{
-    min-height: 5vh;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    background-color: $mint-cream;
-}
+// .header{
+//     min-height: 5vh;
+//     display: block;
+//     justify-content: center;
+//     align-items: center;
+//     background-color: $mint-cream;
+// }
