--- a/client/src/styles/components/_Gallery.scss
+++ b/client/src/styles/components/_Gallery.scss
@@ -157,7 +157,7 @@ h1 {
     justify-content: space-between;
     width: 100%;
     z-index: 10;
-    transform: translateY(-50%);  /* Asegura que las flechas estén centradas verticalmente */
+    transform: translateY(-50%);
   }
 
   .nav-btn {
@@ -170,14 +170,20 @@ h1 {
     color: #333;
     transition: background-color 0.3s ease;
 
-    /* Para las flechas al pasar el ratón */
     &:hover {
       background-color: darken($mint-cream, 30%);
     }
 
-    /* Para que las flechas estén a la misma altura, no necesitan márgenes adicionales */
     &:focus {
       outline: none;
     }
+  }
+}
+
+/* Ocultar el overlay y carrusel en dispositivos móviles */
+@media (max-width: 767px) {
+  .overlay,
+  .carousel {
+    display: none;
   }
 }
