--- a/client/src/styles/components/_Footer.scss
+++ b/client/src/styles/components/_Footer.scss
@@ -5,6 +5,7 @@
     background-color: $mint-cream;
     color: $blueish-black;
     padding: 2rem 0;
+    margin-top: 2rem;
 
     .container {
         .social-links {
