--- a/client/src/styles/components/_Team.scss
+++ b/client/src/styles/components/_Team.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   .introduction {
-    margin: 20px 0 30px 0;
+    margin: 20px 10rem 30px 10rem;
 
     h1 {
       text-align: center;
