--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -62,7 +62,7 @@
 
 @media (max-width: 600px) {
   .home-bg {
-    background-image: url('../assets/narissa-de-villiers-WmtpJcAPMco-unsplash.jpg');
+    background-image: url('../assets/manos.jpg');
   }
 
   .home-title {
